[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy/MeleeEnemy.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.5, 10 )

[node name="MeleeEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )
damage = 3
color = Color( 0.266667, 1, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 14.5, 0 )
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_HitArea_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
